drawGraph2 next working

--- a/v2.0/result_template.html
+++ b/v2.0/result_template.html
@@ -37,6 +37,7 @@
 
     </style>
     <script src="script.js" type="module"></script>  
+    <script src="test.js" type="module"></script>  
 </head>
     
 <body>
