--- a/v2.0/result_template.html
+++ b/v2.0/result_template.html
@@ -32,7 +32,7 @@
 
             width:100px;
             height:100px;
-            background-color: blue;
+            background-color: lime;
         }
 
     </style>
